@@ -76,9 +76,10 @@ if not onDarwin:
     else: env['LINK']="libtool --mode=link g++"
 env['LINKFLAGS']+=[# "-Wl,--allow-multiple-definition", # You may need this when cross-compiling
                    #"-pg",                             # Profile
-                   "-rdynamic",                       # Keep function names for backtracing
                    ternary(make64bit, "-m64", "-m32")
                   ]
+if not onDarwin:
+    env['LINKFLAGS']+=[ "-rdynamic"]                  # Keep function names for backtracing
 if architecture=="macosx-ppc":
     env['LINKFLAGS']+=["-arch", "ppc"]
 elif architecture=="macosx-i386":
