@@ -1492,11 +1492,15 @@ bool FXApp::openDisplay(const FXchar* dpyname){
 #else
 		FXString bestfont("helvetica,80");
 #endif
-#if defined(HAVE_XFT_H) || !defined(__APPLE__)		// Searching fonts crashes Apple's X11 implementation
+#if defined(HAVE_XFT_H)
 		FXFontDesc *fonts=0;
 		FXuint numfonts, f;
 		if(FXFont::listFonts(fonts, numfonts, "", 0, FXFont::Straight,
 							 0, FONTENCODING_UNICODE, /*FXFont::Swiss|*/FXFont::Scalable))
+		{
+			fxerror("No Freetype fonts found. Try running 'sudo fc-cache'\n");
+		}
+		else
 		{
 			int bestscore=32;
 			for(f=0; f<numfonts; f++)
